// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResourceListItem - Listen to Article Feature > should handle various metadata combinations with audio URL 1`] = `
<div
  class="resource-item__bottom-metadata mt-4 flex flex-wrap items-center gap-x-1 gap-y-2"
>
  <p
    class="bluedot-p not-prose text-gray-600 text-[13px] font-medium leading-[140%] tracking-[-0.005em]"
  >
    <span>
      Alice Brown
    </span>
    <span>
       · 
    </span>
    <span>
      2024
    </span>
    <span>
       ·
    </span>
  </p>
  <button
    aria-label="Listen to article: Introduction to AI Safety (opens in Spotify)"
    class="flex flex-row items-center gap-1.5 h-[18px] group cursor-pointer transition-colors duration-200 bg-transparent border-none p-0"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        class="group-hover:stroke-bluedot-navy transition-colors duration-200"
        height="14.75"
        rx="7.375"
        stroke="#6A6F7A"
        stroke-width="1.25"
        width="14.75"
        x="0.625"
        y="0.625"
      />
      <path
        class="group-hover:fill-bluedot-navy transition-colors duration-200"
        d="M6 10.4839V5.51675C6 5.13551 6.40956 4.89452 6.74282 5.07967L11.2133 7.56325C11.5562 7.75375 11.5562 8.2469 11.2133 8.4374L6.74282 10.921C6.40956 11.1061 6 10.8651 6 10.4839Z"
        fill="#6A6F7A"
      />
    </svg>
    <span
      class="text-[13px] font-medium leading-[140%] tracking-[-0.005em] text-[#6A6F7A] group-hover:text-bluedot-navy transition-colors duration-200"
    >
      Listen to article
    </span>
  </button>
</div>
`;

exports[`ResourceListItem - Listen to Article Feature > should handle various metadata combinations with audio URL 2`] = `
<div
  class="resource-item__bottom-metadata mt-4 flex flex-wrap items-center gap-x-1 gap-y-2"
>
  <p
    class="bluedot-p not-prose text-gray-600 text-[13px] font-medium leading-[140%] tracking-[-0.005em]"
  >
    <span>
      2024
    </span>
    <span>
       · 
    </span>
    <span>
      20
       min
    </span>
    <span>
       ·
    </span>
  </p>
  <button
    aria-label="Listen to article: Introduction to AI Safety (opens in Spotify)"
    class="flex flex-row items-center gap-1.5 h-[18px] group cursor-pointer transition-colors duration-200 bg-transparent border-none p-0"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        class="group-hover:stroke-bluedot-navy transition-colors duration-200"
        height="14.75"
        rx="7.375"
        stroke="#6A6F7A"
        stroke-width="1.25"
        width="14.75"
        x="0.625"
        y="0.625"
      />
      <path
        class="group-hover:fill-bluedot-navy transition-colors duration-200"
        d="M6 10.4839V5.51675C6 5.13551 6.40956 4.89452 6.74282 5.07967L11.2133 7.56325C11.5562 7.75375 11.5562 8.2469 11.2133 8.4374L6.74282 10.921C6.40956 11.1061 6 10.8651 6 10.4839Z"
        fill="#6A6F7A"
      />
    </svg>
    <span
      class="text-[13px] font-medium leading-[140%] tracking-[-0.005em] text-[#6A6F7A] group-hover:text-bluedot-navy transition-colors duration-200"
    >
      Listen to article
    </span>
  </button>
</div>
`;

exports[`ResourceListItem - Listen to Article Feature > should render Listen to article button when audio URL is provided 1`] = `
<div
  class="resource-item__bottom-metadata mt-4 flex flex-wrap items-center gap-x-1 gap-y-2"
>
  <p
    class="bluedot-p not-prose text-gray-600 text-[13px] font-medium leading-[140%] tracking-[-0.005em]"
  >
    <span>
      John Doe
    </span>
    <span>
       · 
    </span>
    <span>
      2024
    </span>
    <span>
       · 
    </span>
    <span>
      10
       min
    </span>
    <span>
       ·
    </span>
  </p>
  <button
    aria-label="Listen to article: Introduction to AI Safety (opens in Spotify)"
    class="flex flex-row items-center gap-1.5 h-[18px] group cursor-pointer transition-colors duration-200 bg-transparent border-none p-0"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        class="group-hover:stroke-bluedot-navy transition-colors duration-200"
        height="14.75"
        rx="7.375"
        stroke="#6A6F7A"
        stroke-width="1.25"
        width="14.75"
        x="0.625"
        y="0.625"
      />
      <path
        class="group-hover:fill-bluedot-navy transition-colors duration-200"
        d="M6 10.4839V5.51675C6 5.13551 6.40956 4.89452 6.74282 5.07967L11.2133 7.56325C11.5562 7.75375 11.5562 8.2469 11.2133 8.4374L6.74282 10.921C6.40956 11.1061 6 10.8651 6 10.4839Z"
        fill="#6A6F7A"
      />
    </svg>
    <span
      class="text-[13px] font-medium leading-[140%] tracking-[-0.005em] text-[#6A6F7A] group-hover:text-bluedot-navy transition-colors duration-200"
    >
      Listen to article
    </span>
  </button>
</div>
`;

exports[`ResourceListItem - Listen to Article Feature > should render Listen to article even without other metadata 1`] = `
<div
  class="resource-item__bottom-metadata mt-4 flex flex-wrap items-center gap-x-1 gap-y-2"
>
  <p
    class="bluedot-p not-prose text-gray-600 text-[13px] font-medium leading-[140%] tracking-[-0.005em]"
  >
    <span>
      2024
    </span>
    <span>
       ·
    </span>
  </p>
  <button
    aria-label="Listen to article: Introduction to AI Safety (opens in Spotify)"
    class="flex flex-row items-center gap-1.5 h-[18px] group cursor-pointer transition-colors duration-200 bg-transparent border-none p-0"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        class="group-hover:stroke-bluedot-navy transition-colors duration-200"
        height="14.75"
        rx="7.375"
        stroke="#6A6F7A"
        stroke-width="1.25"
        width="14.75"
        x="0.625"
        y="0.625"
      />
      <path
        class="group-hover:fill-bluedot-navy transition-colors duration-200"
        d="M6 10.4839V5.51675C6 5.13551 6.40956 4.89452 6.74282 5.07967L11.2133 7.56325C11.5562 7.75375 11.5562 8.2469 11.2133 8.4374L6.74282 10.921C6.40956 11.1061 6 10.8651 6 10.4839Z"
        fill="#6A6F7A"
      />
    </svg>
    <span
      class="text-[13px] font-medium leading-[140%] tracking-[-0.005em] text-[#6A6F7A] group-hover:text-bluedot-navy transition-colors duration-200"
    >
      Listen to article
    </span>
  </button>
</div>
`;

exports[`ResourceListItem - Listen to Article Feature > should render Listen to article with proper separator when metadata exists 1`] = `
<div
  class="resource-item__bottom-metadata mt-4 flex flex-wrap items-center gap-x-1 gap-y-2"
>
  <p
    class="bluedot-p not-prose text-gray-600 text-[13px] font-medium leading-[140%] tracking-[-0.005em]"
  >
    <span>
      Jane Smith
    </span>
    <span>
       · 
    </span>
    <span>
      2024
    </span>
    <span>
       · 
    </span>
    <span>
      15
       min
    </span>
    <span>
       ·
    </span>
  </p>
  <button
    aria-label="Listen to article: Introduction to AI Safety (opens in Spotify)"
    class="flex flex-row items-center gap-1.5 h-[18px] group cursor-pointer transition-colors duration-200 bg-transparent border-none p-0"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        class="group-hover:stroke-bluedot-navy transition-colors duration-200"
        height="14.75"
        rx="7.375"
        stroke="#6A6F7A"
        stroke-width="1.25"
        width="14.75"
        x="0.625"
        y="0.625"
      />
      <path
        class="group-hover:fill-bluedot-navy transition-colors duration-200"
        d="M6 10.4839V5.51675C6 5.13551 6.40956 4.89452 6.74282 5.07967L11.2133 7.56325C11.5562 7.75375 11.5562 8.2469 11.2133 8.4374L6.74282 10.921C6.40956 11.1061 6 10.8651 6 10.4839Z"
        fill="#6A6F7A"
      />
    </svg>
    <span
      class="text-[13px] font-medium leading-[140%] tracking-[-0.005em] text-[#6A6F7A] group-hover:text-bluedot-navy transition-colors duration-200"
    >
      Listen to article
    </span>
  </button>
</div>
`;

exports[`ResourceListItem - Listen to Article Feature > should render metadata without Listen to article button when no audio URL 1`] = `
<div
  class="resource-item__bottom-metadata mt-4 flex flex-wrap items-center gap-x-1 gap-y-2"
>
  <p
    class="bluedot-p not-prose text-gray-600 text-[13px] font-medium leading-[140%] tracking-[-0.005em]"
  >
    <span>
      John Doe
    </span>
    <span>
       · 
    </span>
    <span>
      2024
    </span>
    <span>
       · 
    </span>
    <span>
      10
       min
    </span>
  </p>
</div>
`;
